// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Synset #parse() should parse synset: !: synset 1`] = `
{
  "lemmas": [],
  "verified": false,
}
`;

exports[`Synset #parse() should parse synset: !U-Boot: synset 1`] = `
{
  "lemmas": [
    {
      "value": "U-Boot",
    },
  ],
  "verified": false,
}
`;

exports[`Synset #parse() should parse synset: !only, ĝuste nun: synset 1`] = `
{
  "lemmas": [
    {
      "value": "only",
    },
    {
      "value": "ĝuste nun",
    },
  ],
  "verified": false,
}
`;

exports[`Synset #parse() should parse synset: : synset 1`] = `
{
  "lemmas": [],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: bring (up) to: synset 1`] = `
{
  "lemmas": [
    {
      "value": "bring (up) to",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: extra comma,: synset 1`] = `
{
  "lemmas": [
    {
      "value": "extra comma",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: extra,,comma,: synset 1`] = `
{
  "lemmas": [
    {
      "value": "extra",
    },
    {
      "value": "comma",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: з'явитися: synset 1`] = `
{
  "lemmas": [
    {
      "value": "з'явитися",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: за (напр.: по грибы, за хлебом), по: synset 1`] = `
{
  "lemmas": [
    {
      "annotations": [
        "напр.: по грибы, за хлебом",
      ],
      "value": "за",
    },
    {
      "value": "по",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: и; а зато (смысл2): synset 1`] = `
{
  "lemmas": [
    {
      "value": "и",
    },
    {
      "annotations": [
        "смысл2",
      ],
      "value": "а зато",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: сей (устар.; местоим.): synset 1`] = `
{
  "lemmas": [
    {
      "annotations": [
        "устар.",
        "местоим.",
      ],
      "value": "сей",
    },
  ],
  "verified": true,
}
`;

exports[`Synset #parse() should parse synset: той, що є;: synset 1`] = `
{
  "lemmas": [
    {
      "value": "той, що є",
    },
  ],
  "verified": true,
}
`;
